--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
 
 <head>
   <meta charset="UTF-8"/>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background: url(img/bg.jpg) no-repeat center; background-size: cover;">
+  <div class="container">
+      <h1>Todo aplikacija</h1>
+    <div class="wrapper">
   <div id="app"></div>
-
+</div>
+</div>
   <script src="bundle.js"></script>
 </body>
 
